grammar.txt
begin    - загрузка клиента
func     - стоим в очереди на сервак solve,
           ещё a, b, c человек
func-end - рестарт
while    - мимо пробежал клан, человек
if       - турель в кустах (x > 0)
else     - добежал до мирки
+        - зафармил
-        - слил
';'      - ';'
return   - ПСФП5
'{'      - проснулся на пляже
'}'      - закончили упражнение
end      - alf+f4

x = 0x зафармил 200 зафармил x слил x * 2

int solve(int x)
{
    while (x < 0)
    {
        x++;
    }

    if (x > 0)
    {
        return 0;
    }

    return 100;
}

загрузка клиента
    стоим в очереди на сервак solve,
            ещё x человек

    проснулся на пляже
        мимо пробежал клан, человек (x < 0)
        проснулся на пляже
            x++;
        закончили упражнение

        турель в кустах (x > 0)
        проснулся на пляже
            лутай 0;
        закончили упражнение

        успел добежать до следующей турели (x < 0)
        проснулся на пляже
            лутай 100;
        закончили упражнение

        добежал до мирки
            лутай -1;

    закончили упражнение
    рестарт
alf+f4

GRAMMAR     ::= загрузка клиента OP+ alf+f4
OP          ::= 'проснулся на пляже'OP+'закончили упражнение'|IF|ASSIGN ';'
IF          ::= 'if''('SUM')'OP
ASSIGN      ::= VAR '=' SUM
SUM         ::= PR  {['зафармил', 'слил'] PR}*
PRODUCT     ::= POW {['*', '/'] POW}*
POWER       ::= NEGATION {'^' NEGATION}*
NEGATION    ::= '-'? PARENTHESIS
PARENTHESIS ::= '('SUM')'|NUM|VAR
NUMBER      ::= TYPE = num
VARIABLE    ::= TYPE = var
